# django-francedata

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  django.yml  publish-package.yml
example/: local_sample.py  settings.py  urls.py
francedata/: admin.py  api.py  apps.py  models.py  schemas.py
francedata/management/commands/: cog_import.py  files_import.py
francedata/migrations/: 0001_initial.py
francedata/models/: collectivity.py  meta.py  sources.py
francedata/resources/: departements-siren.csv
francedata/services/: banatic.py  cog.py  django_admin.py  utils.py
francedata/tests/: tests_models.py
francedata/tests/services/: tests_banatic.py  tests_utils.py
