[tool.poetry]
name = "django-francedata"
version = "0.8.5"
description = "A Django app to provide a database structure, API and import scripts to manage French communes, intercommunalités, départements and régions, with their structure and data from Insee and the DGCL."
authors = ["Sylvain Boissel <sylvain.boissel@dgcl.gouv.fr>"]
license = "AGPL-3"

readme = "README.rst"
homepage = "https://github.com/entrepreneur-interet-general/django-francedata"
repository = "https://github.com/entrepreneur-interet-general/django-francedata"
keywords = ["django"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
packages = [
    { include = "francedata" },
]

include = ["LICENSE", "README.rst", "francedata/resources/*" ]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
requests = "^2.26.0"
python-stdnum = "^1.16"
Unidecode = "^1.2.0"
openpyxl-dictreader = "^0.1.3"
django-ninja = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"