[tool.poetry]
authors = ["Sylvain Boissel <sylvain.boissel@beta.gouv.fr>"]
description = "A Django app to provide a database structure, API and import scripts to manage French communes, intercommunalités, départements and régions, with their structure and data from Insee and the DGCL."
license = "AGPL-3"
name = "django-francedata"
version = "0.16.1"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
homepage = "https://github.com/entrepreneur-interet-general/django-francedata"
keywords = ["django"]
packages = [
  {include = "francedata"},
]
readme = "README.rst"
repository = "https://github.com/entrepreneur-interet-general/django-francedata"

include = ["LICENSE", "README.rst", "francedata/resources/*"]

[tool.poetry.dependencies]
Django = "^3.2.7"
Unidecode = "^1.2.0"
django-json-widget = "^1.1.1"
django-ninja = "^0.14.0"
django-simple-history = "^3.0.0"
openpyxl-dictreader = "^0.1.3"
pandas = "^1.3.4"
psycopg2 = "^2.9.2"
python = "^3.8"
python-stdnum = "^1.16"
requests = "^2.26.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
ipython = "^8.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
