[metadata]
name = django-francedata
version = 0.8.4
description = A Django app to provide a database structure, API and import scripts to manage French communes, intercommunalités, départements and régions, with their structure and data from Insee and the DGCL.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/entrepreneur-interet-general/django-francedata
author = Sylvain Boissel
author_email = sylvain.boissel@dgcl.gouv.fr
license = GNU Affero General Public License v3+
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.2
    requests >= 2.26
    psycopg2 >= 2.9.1
    python-stdnum >= 1.16
    Unidecode >= 1.2.0
    openpyxl-dictreader >= 0.1.3
    django-ninja >= 0.13.2